# CertAutoMake

./: CMakeLists.txt  Jak używać.txt
Base64/: Base64.vcxproj  Base64.vcxproj.filters  CMakeLists.txt
Base64/inc/: cdecode.hpp  cencode.hpp  decode.hpp  encode.hpp
Base64/src/: cdecode.cpp  cencode.cpp  decode.h  encode.h
CertAutoMake/: CertAutoMake.sln  CertAutoMake.vcxproj
CertAutoMake/src/: main.cpp
FilesManagment/: FilesManagment.vcxproj
FilesManagment/inc/: FilesManagment.hpp
FilesManagment/src/: FilesManagment.cpp  FilesManagment.h
XML/: CMakeLists.txt  XML.vcxproj  XML.vcxproj.filters
XML/inc/: XMLfile.hpp
XML/src/: XMLfile.cpp  XMLfile.h
dataAboutXML/: MIR-SR2_Dokumentacja_techniczna_importu_XML_v100_20150915.docx  swiadectwo_energetyczne.xsd  swiadectwo_energetyczne1.xml  swiadectwo_energetyczne2.xml  swiadectwo_energetyczne3.xml  swiadectwo_energetyczne4_zdjecie.xml
firmware/: CMakeLists.txt  CertAutoMake.cpp
